test/libsolidity/syntaxTests/operators/userDefined/operator_parsing_function_name_missing.sol
using {as -} for uint global;
// ----
// ParserError 2314: (7-9): Expected identifier but got 'as'
